# auth-crypto-service

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose-service.yml  docker-compose-vault.yaml  docker-compose-vault.yml  docker-compose.yml  setup-vault.sh
src/: app.rs  connections.rs  helpers.rs  logging.rs  main.rs  shutdown_signal.rs
src/core/: helpers.rs
src/keys/: jwt_service.rs  key_store.rs  keys_repo.rs  keys_repo_impl.rs  mod.rs  models.rs  router.rs  state.rs
src/keys/handlers/: jwks.rs  mod.rs  refresh_keys.rs  sign_jwt.rs
src/keys/repo/: keys_repo.rs  keys_repo_impl.rs  mod.rs
src/keys/service/: jwt_service.rs  key_store.rs  mod.rs
tests/: integration.rs  run-enviroment.sh  run-tests.sh
vault-config/: vault-config.hcl
