[package]
name = "auth-crypto-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["tracing"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
p256 = "0.13.2"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
vaultrs = "0.7.4"
rand_core = "0.6"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower = "0.5.2"

